# voxl-docker-dev

./: .gitignore  .gitmodules  Dockerfile.focal-minimal  README.md  build-docker.sh  generator.sh
mavros_test/: build.sh  ros_environment.sh  run_mavros.sh  run_offboard_test.sh
mavros_test/catkin_ws/src/offboard_test/: package.xml
mavros_test/catkin_ws/src/offboard_test/src/: offboard_test_node.cpp
ros1_noetic/: Dockerfile.focal-base  Dockerfile.focal-packages  LICENSE  README.md  build-docker.sh
ros1_noetic/mavros_test/: README.md  run_mavros_test.sh  run_offboard_test.sh
ros1_noetic/mavros_test/catkin_ws/src/offboard_test/: CMakeLists.txt  package.xml
ros1_noetic/mavros_test/catkin_ws/src/offboard_test/launch/: offboard_test.launch
ros1_noetic/mavros_test/catkin_ws/src/offboard_test/src/: FlightPattern.hpp  offboard_test_node.cpp
ros2_humble/: README.md
ros2_humble/mavros_test/: README.md
ros2_humble/mavros_test/ros2_px4_ws/src/mavros_offb/: CMakeLists.txt  package.xml
ros2_humble/mavros_test/ros2_px4_ws/src/mavros_offb/launch/: offb_launch.xml  offb_launch.yaml
ros2_humble/mavros_test/ros2_px4_ws/src/mavros_offb/src/: FlightPattern.hpp  offb_node.cpp
