<?xml version="1.0"?>
<package>
  <name>offboard_test</name>
  <version>1.0.0</version>
  <description>The offboard_test package</description>
  <maintainer email="50212147+limshoonkit@users.noreply.github.com">janitor</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mavros</build_depend>
  <run_depend>mavros</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <export>

  </export>
</package>
